# ParallelProgramming_FinalProject

./: .gitignore  CMakeLists.txt  CSC14120_2025_Final Project.txt  MEMORY_OPTIMIZATION_PLAN.md  Makefile  PHASE2_README.md  Project_Report.ipynb  README.md  notebook.ipynb  run_pipeline.py
cuda/: gpu_kernels.cu  gpu_kernels.h  gpu_kernels_naive.cu  gpu_kernels_naive.h  gpu_kernels_optimized.cu  gpu_kernels_optimized.h  gpu_kernels_optimized_1.cu  gpu_kernels_optimized_1.h  gpu_kernels_optimized_2.cu  gpu_kernels_optimized_2.h
features/: README.md
include/: autoencoder_cpu.h  autoencoder_gpu.h  autoencoder_gpu_optimized.h  autoencoder_gpu_optimized_1.h  autoencoder_gpu_optimized_2.h  cifar10_loader.h  svm_classifier.h
python_scripts/: visualize_naive_gpu_reconstruction.ipynb
results/: README.md
src/: autoencoder_cpu.cu  autoencoder_gpu.cu  autoencoder_gpu_optimized.cu  autoencoder_gpu_optimized_1.cu  autoencoder_gpu_optimized_2.cu  cifar10_loader.cu  main_phase1.cu  main_phase2.cu  main_phase3.cu  main_phase3_1.cu  main_phase3_2.cu  main_phase4.cu  main_phase4_extract_features.cu  main_phase4_svm.py  naive_gpu_inference.cu  reconstruct.cu  svm_classifier.cu
weights/: README.md
